Commit Inicial Lucas; Criação do consumo da API

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Pomodoro</title>
 </head>
-<body>
-    
 
+<body>
+    <h1>Exercícios de Stretching</h1>
+    <div id="exercises-container"></div>
+
+    
     <script src="./js/pomodoro.js"></script>
 </body>
+
 </html>
