Inclusão de Imagem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="container">
     <h1>Pomodoro Timer</h1>
     <div id="pomodoro">
-      <img src="https://pngimg.com/uploads/tomato/tomato_PNG12592.png" style="width: 350px; height: 350px" />
+      <img src="./img/tomato.png" style="width: 350px; height: 350px" />
       <div id="timer">25:00</div>
       <button class="btn" id="btn-start" onclick="startPomodoro()">Iniciar</button>
     </div>
