Aualização da integração com API, Ajustes no nome das Imagens, Tradução dos Exercícios

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
   <div class="container">
     <h2>Exercício Escolhido</h2>
     <div id="exercise-container"></div>
+    <button class="btn" id="btn-next-exercise" onclick="getNextExercise()">Próximo Exercício</button>
   </div>
 
+
+  
   <script src="./js/timer.js"></script>
   <script src="./js/pomodoro.js"></script>
+  <script src="./js/traducao.js"></script>
 </body>
 
 </html>
