--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Pacifico&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Pacifico&display=swap" rel="stylesheet" />
   <title>Pomodoro Timer</title>
 </head>
 
@@ -18,17 +17,21 @@
     <div id="pomodoro">
       <img src="./img/tomato.png" style="width: 350px; height: 350px" />
       <div id="timer">25:00</div>
-      <button class="btn" id="btn-start" onclick="startPomodoro()">Iniciar</button>
+      <button class="botao" id="btn-start" onclick="startPomodoro()">Iniciar</button>
     </div>
 
-    <button class="btn" onclick="startShortBreak()">Pausa curta</button>
-    <button class="btn" onclick="startLongBreak()">Pausa longa</button>
-    <button class="btn" onclick="stopTimer()">Parar Timer</button>
+    <button class="botao" onclick="startShortBreak()">Pausa curta</button>
+    <button class="botao" onclick="startLongBreak()">Pausa longa</button>
+    <button class="botao" onclick="stopTimer()">Parar Timer</button>
   </main>
   <div class="container">
     <h2>Exercício Escolhido</h2>
     <div id="exercise-container"></div>
-    <button class="btn" id="btn-next-exercise" onclick="getNextExercise()">Próximo Exercício</button>
+    <button class="botao" id="btn-next-exercise" onclick="getNextExercise()">Próximo Exercício</button>
+  </div>
+
+  <div class="modalExercicio">
+    
   </div>
 
 
@@ -36,6 +39,7 @@
   <script src="./js/timer.js"></script>
   <script src="./js/pomodoro.js"></script>
   <script src="./js/traducao.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
