--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="btnn pause"> +5 Minutos </button>
     </div>
     <!-- Botão do modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+    <button type="button" class="btnn exercicio" data-bs-toggle="modal" data-bs-target="#exampleModal"
       style="margin-top: 10px;">
       Exibir Exercício
     </button>
