refactor: timer - ajustes de conflito

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Pacifico&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <title>Pomodoro Timer</title>
   </head>
 
@@ -29,13 +32,13 @@
 
       <div class="controls">
         <div class="focus-session">
-          <span class="header">Tempo de Foco</span>
+          <span class="header">Foco</span>
           <span id="focus-time"></span>
           <button class="btn-minus" id="focus-minus" type="button">-</button>
           <button class="btn-plus" id="focus-plus" type="button">+</button>
         </div>
         <div class="break-session">
-          <span class="header">Tempo de pausa</span>
+          <span class="header">Pausa</span>
           <span id="break-time"></span>
           <button class="btn-minus" id="break-minus" type="button">-</button>
           <button class="btn-plus" id="break-plus" type="button">+</button>
