feat: abrir e fechar modal quando inicia e termina o tempo de pausa

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
           <div class="modal-content">
             <div class="modal-header">
               <h2 class="modal-title" id="exerciseModalTitle">EXERCÍCIO</h2>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" id="closeModal" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="exerciseModalBody">
               <div id="exercise-container"></div>
               <!-- Os detalhes do exercício serão exibidos aqui -->
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button> -->
               <button type="button" class="btn btn-primary" id="btn-next-exercise">Escolher Outro Exercício</button>
             </div>
           </div>
