Ajustes no consumo da API; Ajustes na chamada do Modal; Ajustes ao fechar o modal pelo timer;

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <button class="control-button" id="start">Iniciar</button>
           <button class="control-button" id="stop">Parar</button>
               <!-- Botão do modal -->
-          <button type="button" class="control-button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+          <button id="btExibeExercicio" type="button" class="control-button" data-bs-toggle="modal" data-bs-target="#exampleModal"
             style="margin-top: 10px;">
             Exibir Exercício
           </button>
